@@ -4,6 +4,10 @@
 
   19 Sep 2007; Alexis Ballier <aballier@gentoo.org>
   texlive-core-2007.ebuild:
+  drop virtual/x11 reference
+
+  19 Sep 2007; Alexis Ballier <aballier@gentoo.org>
+  texlive-core-2007.ebuild:
   Use -j1 for emake only for icu-xetex, other parts are fine
 
   19 Sep 2007; Alexis Ballier <aballier@gentoo.org>
